--- a/FPGA/Protokoll/diskussion.tex
+++ b/FPGA/Protokoll/diskussion.tex
@@ -5,7 +5,7 @@ Es ist klar geworden, dass sich viele Aufgaben, die man typischerweise in sequen
 Die Parallelisierung von Prozessen stellt sich zu Beginn als Herausforderung dar, da ein Umdenken weg vom sequentiellen verarbeiten der Daten erfolgen muss.
 Auch ist klar, dass FPGA den klassischen Computer trotz der großen Verarbeitungsgeschwindigkeiten nicht ablösen kann.
 Tatsächlich ist es möglich eine CPU in einem FPGA zu implementieren.
-Diese müssen dann aber meist Abstriche bei den Taktgeschwindigkeiten machen, und damit auch bei der (sequentiellen) Rechenleistung, da Signallaufzeiten nicht so weit optimierbar sind wie bei herkömmlichen CPUs.
+Diese müssen dann aber Abstriche bei den Taktgeschwindigkeiten machen, und damit auch bei der (sequentiellen) Rechenleistung, da Signallaufzeiten nicht so weit optimierbar sind wie bei herkömmlichen CPUs.
 
 In jedem Fall lässt sich der Versuch als gelungen betrachten.
 Wir sind sehr zufrieden gewesen mit der Aufgabenstellung; durch die Einführung über ein physikalisch relevantes Thema stellt sich auch die typische Frage \glqq Wofür brauch ich das\grqq{} nicht.
