--- a/FPGA/Protokoll/Einleitung+Theorie.tex
+++ b/FPGA/Protokoll/Einleitung+Theorie.tex
@@ -26,7 +26,7 @@ Um die Rekonfigurierbarkeit von FPGA zu ermöglichen, werden \glqq Schalter\grqq
 Ein Beispiel für die Schaltung zwischen Logikblöcken ist in Abb. \ref{schalter} zu sehen.
 \begin{figure}[h]
   \includegraphics[width=\linewidth]{../Daten/schalter.png}
-  \caption{rekonfigurierbare Schalter zwischen Logigblöcken}
+  \caption{rekonfigurierbare Schalter zwischen Logigblöcken \cite{Anleitung}}
   \label{schalter}
 \end{figure}
 Um ein FPGA auf gewünschte Art zu konfigurieren, müssen Hardware-Programmiersprachen (\glqq Hardware Description Language\grqq{} oder HDL) verwendet werden.
@@ -58,7 +58,7 @@ Dieser entsteht einerseits durch elektronisches Rauschen und andererseits durch 
 
 \begin{figure}[h]
   \includegraphics[width=\linewidth]{../Daten/pileup.png}
-  \caption{Beispielhafte Darstellung eines Pile-Ups}
+  \caption{Beispielhafte Darstellung eines Pile-Ups \cite{Anleitung}}
   \label{pileup}
 \end{figure}
 Für die Analyse der Detektoren ist es wesentlich dieses Rauschen zu unterdrücken und auch allgemeiner die Impulse in eine digital auslesbare Form zu bringen.
