--- a/PP/Protokoll/main.tex
+++ b/PP/Protokoll/main.tex
@@ -82,6 +82,10 @@ Betreuer: & \betreuer\end{tabular}}
 \input{Aufgabenstellung.tex}
 \input{theorie.tex}
 \input{invariante_masse.tex}
+\input{mystery.tex}
+\input{higgs.tex}
+\input{Z_prime_auswertung.tex}
+\input{diskussion.tex}
 
 \nocite{*} % alle resourcen auflisten
 \printbibliography
