--- a/PP/Protokoll/Z_prime_auswertung.tex
+++ b/PP/Protokoll/Z_prime_auswertung.tex
@@ -16,23 +16,23 @@ Insbesondere bei der invarianten Masse sind die relativen Fehler hier jedoch rec
 \begin{figure}[h]
 \begin{subfigure}{.5\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{../Pictures/before.png}
+\includegraphics[width=.8\linewidth]{../Pictures/Auswertung/before.png}
 \caption{Impulse ohne Cuts}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{../Pictures/after.png}
+\includegraphics[width=.8\linewidth]{../Pictures/Auswertung/after.png}
 \caption{Impulse mit Cuts}
 \end{subfigure}%
 \vskip\baselineskip
 \begin{subfigure}{.5\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{../Pictures/mass_before.png}
+\includegraphics[width=.8\linewidth]{../Pictures/Auswertung/mass_before.png}
 \caption{invariante Masse ohne Cuts}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{../Pictures/mass_after.png}
+\includegraphics[width=.8\linewidth]{../Pictures/Auswertung/mass_after.png}
 \caption{invariante Masse mit Cuts}
 \end{subfigure}%
 \caption{Auswirkungen der Cuts auf die Ereignisse }
