--- a/PP/Protokoll/invariante_masse.tex
+++ b/PP/Protokoll/invariante_masse.tex
@@ -1,6 +1,8 @@
 \section{Invariante Masse des $Z$-Boson}
 
-
+In diesem Versuchsteil soll die invariante Masse von $Z^0 \rightarrow e^+ e^-$ Ereignissen berechnet werden.
+Dies soll einmal exakt und einmal mit der Näherung $m_e = 0$ durchgeführt werden.
+Für die Berechnung standen mehrere aufgenommene Detektorereignisse zur Verfügung, von denen zur Berechnung vier zufällig ausgewählt wurden.
 Die invariante Masse beim Zerfall eines Teilchens in zwei Teilchen, ergibt sich mithilfe ihrer Vierervektoren zu:
 \[
 M^2 =\left[ \left( \begin{array}{c} E_1 \\ {\vec{p}_1} \end{array} \right) + \left( \begin{array}{c} E_2 \\ {\vec{p}_2} \end{array} \right) \right]^2
@@ -12,7 +14,7 @@ Die Energie ergibt sich aus der relativistischen Energie-Impuls-Relation zu:
 \[
 E_i = \sqrt{m_i^2 + \textbf{p}_i^2}
 \]
-Im Falle masseloser Teilchen, bzw. bei Vernachlässigung der Masse, vereinfacht sich dies zu:
+Im Falle masseloser Teilchen, bzw. bei Vernachlässigung der Masse, vereinfacht sich die invariante Masse zu:
 \[
 M = \sqrt{2 \textbf{p}_1 \textbf{p}_2 (1-\cos \vartheta)}
 \]
