--- a/GA/Protokoll/main.tex
+++ b/GA/Protokoll/main.tex
@@ -80,8 +80,11 @@ Betreuer: & \betreuer\end{tabular}}
 % ----- DOKUMENT ANFANG -----
 
 \input{hpge.tex}
+\input{szin.tex}
 \input{fukushima.tex}
+\input{chernobyl.tex}
 \input{attenuation.tex}
+\input{diskussion.tex}
 
 \nocite{*} % alle resourcen auflisten
 \printbibliography
