--- a/AMS/Protokoll/main.tex
+++ b/AMS/Protokoll/main.tex
@@ -49,7 +49,7 @@ separate-uncertainty,  % Unsicherheiten seperat angeben (mit ±)
 \usepackage[hidelinks]{hyperref}  % Links und weitere PDF-Features
 
 % TODO: Titel und Autor, … festlegen
-\newcommand*{\titel}{Beschleunigermas­senspektrometrie und Methoden zur Altersbestimmung }
+\newcommand*{\titel}{Beschleunigermas­senspektrometrie und Methoden zur Altersbestimmung}
 \newcommand*{\autor}{Sebastian Thiede, Alexander Lettau}
 \newcommand*{\abk}{BM}
 \newcommand*{\betreuer}{Dr. Johannes Lachner, Dr. Georg Rugel}
@@ -78,6 +78,8 @@ Betreuer: & \betreuer\end{tabular}}
 \end{titlepage}
 
 % ----- DOKUMENT ANFANG -----
+
+\input{Aufgabenstellung.tex}
 
 \nocite{*} % alle resourcen auflisten
 \printbibliography
