--- a/GA/Protokoll/main.tex
+++ b/GA/Protokoll/main.tex
@@ -79,6 +79,7 @@ Betreuer: & \betreuer\end{tabular}}
 
 % ----- DOKUMENT ANFANG -----
 
+\input{theorie.tex}
 \input{hpge.tex}
 \input{szin.tex}
 \input{fukushima.tex}
