Rechtschreibprüfung fehlt noch + Quellen

--- a/GA/Protokoll/hpge.tex
+++ b/GA/Protokoll/hpge.tex
@@ -17,6 +17,7 @@ The result can be seen in Fig. \ref{hpge_background}
 \end{figure}
 For the analysis, we substracted the background sepctrum from the measured spectrum of the samples, to reduce the uncertainty.
 Because the measured times for the samples were much lower, we rescaled the background for every sample with a factor $\frac{t}{15 \text{d}}$, with the measured time $t$. 
+For the measurements we placed the samples on top of the detector, which a $5$cm holder to enlargen the distance, to reduce random coincidences.
 The resulting spectras can be seen in Fig. \ref{hpge}.
 For the analysis, lets first analyse the spectrum of $^{137}$Cs and identify the specific structures.
 In the outmost left and right, we can see peaks that result from decay radiation.
