Rechtschreibprüfung fehlt noch + Quellen

--- a/GA/Protokoll/szin.tex
+++ b/GA/Protokoll/szin.tex
@@ -14,6 +14,7 @@ For this measurement we took a new measurement of the background radiation with 
 
 This background was again substracted from every measured spectrum.
 The measured spectra can be seen in Fig. \ref{szin}.
+For this measurement, we put the source directly on top of the detector.
 Just from looking at the spectra, we can already see that this scintilator has a much lower resolution.
 The energy of the peaks were again taken from (iaea einfügen).
 One special case here is with the $^{22}$Na sample.
