--- a/GA/Protokoll/chernobyl.tex
+++ b/GA/Protokoll/chernobyl.tex
@@ -14,29 +14,29 @@ In Fig. \ref{cher_samples} we can see the spectrum of the refference and the sam
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{pictures/PP34R1_1.png}
+  \includegraphics[width=.9\linewidth]{../plots/PP34R1_1.png}
   \caption{Sample $PP34R1\_1$}
 \end{subfigure}%
  \vskip\baselineskip
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{pictures/PP5PR1_2.png}
+  \includegraphics[width=.9\linewidth]{../plots/PP5PR1_2.png}
   \caption{Sample $PP5PR1\_2$}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{pictures/PP63R1_3.png}
+  \includegraphics[width=.9\linewidth]{../plots/PP63R1_3.png}
   \caption{Sample $PP63R1\_3$}
 \end{subfigure}%
  \vskip\baselineskip
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{pictures/PP84R2_4.png}
+  \includegraphics[width=.9\linewidth]{../plots/PP84R2_4.png}
   \caption{Sample $PP84R2\_4$}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{pictures/PPACR2_5.png}
+  \includegraphics[width=.9\linewidth]{../plots/PPACR2_5.png}
   \caption{Sample $PPACR2\_5$}
 \end{subfigure}%
 \caption{gamma spectra of the measured samples}
