--- a/GA/Protokoll/szin.tex
+++ b/GA/Protokoll/szin.tex
@@ -24,23 +24,23 @@ The one we used, with an energy of $511$ keV has it's origin in photons that are
 \begin{figure}[h]
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{pictures/szin_co.png}
+  \includegraphics[width=.9\linewidth]{../plots/szin_co.png}
   \caption{$^{60}\text{Co}$}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{pictures/szin_cs.png}
+  \includegraphics[width=.9\linewidth]{../plots/szin_cs.png}
   \caption{$^{137}\text{Cs}$}
 \end{subfigure}%
  \vskip\baselineskip
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{pictures/szin_bi.png}
+  \includegraphics[width=.9\linewidth]{../plots/szin_bi.png}
   \caption{$^{207}\text{Ba}$}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{pictures/szin_na.png}
+  \includegraphics[width=.9\linewidth]{../plots/szin_na.png}
   \caption{$^{22}\text{Na}$}
 \end{subfigure}%
 \caption{gamma spectra of the measured sources}
@@ -76,7 +76,7 @@ By plotting the enrgies over the channels we could again do a linear fit to find
 The results can be seen in Fig. \ref{szin_kali}
 
 \begin{figure}[h]
-  \includegraphics[width=\linewidth]{pictures/szin_kali.png}
+  \includegraphics[width=\linewidth]{../plots/szin_kali.png}
   \caption{Calibration curve of the NaI scintilator}
   \label{szin_kali}
 \end{figure}
@@ -107,7 +107,7 @@ As uncertainty for the energy ($\Delta E$) we used again the FHWM calculated in 
 Plotting $\frac{\Delta E}{E}$ und fitting according to Eq. \ref{szin_resolution} gave us Fig. \ref{szin_res}.
 
 \begin{figure}[h]
-  \includegraphics[width=\linewidth]{pictures/szin_res.png}
+  \includegraphics[width=\linewidth]{../plots/szin_res.png}
   \caption{Energy reslution of the NaI scintilator}
   \label{szin_res}
 \end{figure}
