--- a/AMS/Protokoll/theorie.tex
+++ b/AMS/Protokoll/theorie.tex
@@ -6,7 +6,7 @@ Ein Vorteil dieser Methode ist es, dass Kernisobare (z. B. $^{10}$Be und $^{10}$
 Im Folgenden wird eine detaillierte Beschreibung des Vorgehens anhand des DREAMS (DREsden Accelerator Mass Spectrometer) am HZDR gegeben.
 
 \begin{figure}[ht]
-  \includegraphics[width=\linewidth]{dreams.png}
+  \includegraphics[width=\linewidth]{../Bilder/dreams.png}
   \caption{Darstellung des Beschleuniger-Massenspektrometrie-Aufbaus am HZDR [Quelle]}
   \label{dreams}
 \end{figure}
@@ -40,7 +40,7 @@ Durch den massen- und ladungsabhängige Energieverlust der Teilchen in dieser, k
 Gleichzeitig werden innerhalb der Folie weitere Elektronen herausgeschlagen, wodurch die Ladung weiter positiv wird (z. B. $^{10}B^{4+}$).
 Ein weiterer Magnet lenken den Strahl dann zu einer Gasionisationskammer (AMS gas-filled ionization chamber in Ab. \ref{dreams}), indem die Ionen mithilfe von vier Anoden (A, B, C, D) in einem Isobutengas ($C_{4}H_{10}$) gezählt werden (siehe Abb. \ref{ion_chamber}).
 \begin{figure}[ht]
-  \includegraphics[width=\linewidth]{ion_chamber.png}
+  \includegraphics[width=\linewidth]{../Bilder/ion_chamber.png}
   \caption{Gasionisationskammer am DREAMS [Quelle]}
   \label{ion_chamber}
 \end{figure}
