--- a/AMS/Protokoll/main.tex
+++ b/AMS/Protokoll/main.tex
@@ -13,7 +13,7 @@ parskip=full,  % Absätze durch Leerzeile trennen
 
 % Mathematik und Größen
 \usepackage{amsmath}
-\usepackage{amsfonts} 
+\usepackage{amsfonts}
 \usepackage[locale=DE,  % deutsche Eigenarten, englisch -> US
 separate-uncertainty,  % Unsicherheiten seperat angeben (mit ±)
 ]{siunitx}
@@ -87,7 +87,7 @@ Betreuer: & \betreuer\end{tabular}}
 % ----- DOKUMENT ANFANG -----
 
 \input{Aufgabenstellung.tex}
-% --- Theorie ---
+\input{theorie.tex}
 \input{Versuchsaufbau.tex}
 \input{Auswertung.tex}
 
