Plots_LE_FaradayCups

--- a/AMS/Protokoll/main.tex
+++ b/AMS/Protokoll/main.tex
@@ -89,7 +89,8 @@ Betreuer: & \betreuer\end{tabular}}
 \input{Aufgabenstellung.tex}
 \input{theorie.tex}
 \input{Versuchsaufbau.tex}
-\input{Auswertung.tex}
+\input{Auswertung_mit_kali.tex}
+\input{Auswertung_Gasdetektor.tex}
 
 \nocite{*} % alle resourcen auflisten
 \printbibliography
