--- a/AMS/Protokoll/Auswertung_mit_kali.tex
+++ b/AMS/Protokoll/Auswertung_mit_kali.tex
@@ -52,12 +52,8 @@ Unsicherheiten der Beschleunigungsspannungen und des Spulenradius werden hier ni
 Diese wiederrum wäre ebenfalls am besten experimentell (z.B. mittels Hall-Sonde) zu bestimmen.
 
 In Abb. \ref{lowenergy} sind jetzt die Messungen dargestellt.
-Zur Identifikation betrachten wir als erstes die 153BeO Probe, da in dieser nur ein Peak bei $49,02$ A vorhanden ist.
-Nach Formel \ref{LE_masse} folgt damit für die Masse der Teilchen im Strahl: $m = 16,1$ u, was der Masse von $^{16}$O$^{-1}$ entspricht.
-Das vorhandensein von diesen Ionen war im Strahl zu erwarten uns ist jedoch unklar warum keine Be-Ionen oder geladenen BeO-Moleküle detektiert werden.
-
-In Tab. \ref{KY} sind jetzt die Messergebnisse und berechneten Massen für Probe KY13 dargestellt.
-Da die Proben recht ähnlich sind, werden wir auf diese detailliert eingehen und in den sonstigen nur auf neue Peaks eingehen.
+Zur Identifikation betrachten wir als erstes die 153BeO Probe, die berechneten Massen sind in Tab, \Ref{153Be} zu sehen.
+Die höhe der Peaks wird für die folgende Analyse nicht betrachtet.
 \begin{table}[h]
 \centering
 \caption{Berechnung der Massen im Niedrigenergiebereich für Probe KY13.}
@@ -65,33 +61,52 @@ Da die Proben recht ähnlich sind, werden wir auf diese detailliert eingehen und
 \hline
 I[A] & m[u] \\
 \hline
-42,20 & 11,9 \\
-48,82 & 16,0 \\
-50,42 & 17,1 \\
-51,93 & 18,1 \\
-59,94 & 24,1 \\
-61,14 & 25,1 \\
-64,76 & 28,1 \\
-69,27 & 32,2 \\
-73,76 & 36,4 \\
+49,03 & 16,1 \\
+61,31 & 25,2 \\
+64,88 & 28,2 \\
 \hline
+\end{tabular}
+\label{153Be}
+\end{table}
+Die entsprechenden Massen sind hier eindeutig zuordbar, was bei einer reinen Probe auch zu erwarten war.
+\begin{itemize}
+\item $16$ u entsprechen der Masse von $^{16}$O$^{1-}$.
+\item $25$ u entsprechen der Masse von $^{9}$Be$^{16}$O$^{1-}$.
+\item $28$ U entsprechen der Masse von $^{10}$Be$^{18}$O$^{1-}$
+\end{itemize}
+Hier ist auffällig, das zwar sowohl $^{16}$O$^{1-}$ als auch  $^{10}$Be$^{18}$O$^{1-}$ nachweisbar sind, einzelne  $^{18}$O$^{1-}$ Ionen oder  weitere Kombinationen der verschiedenen Isotope jedoch nicht gefunden wurden.
+
+Die Probe KY13 besitzt weitgehend dieselben Peaks.
+Neu hinzugekommen ist bei dieser einer bei $42,29$ A, was einer Masse von $12$ u entspricht.
+Eine Erklärung dieser Masse wären $^{12}$C$^{1-}$ Ionen, welche aus der Probe  oder unter Umständen auch durch Verunreinigungen mit der Luft kommen könnten.
+Ebenfalls möglich, jedoch wäre hier die Abweichung etwas hoch, wären $^{10}$Be$^{16}$O$^{2-}$ Teilchen.
+
+In Tab. \ref{KY_rest} sind jetzt die weiteren Peaks und dazu passenden Ionen dargestellt.
+Auf bereits bereits bestimmte Peaks werden wir hier nicht mehrfach eingehen, wir identifizieren nur neu erscheinende.
+
+\begin{table}[h]
+\centering
+\caption{Identifizierung der Ionen am Magneten. Teilchen die mit X identifiziert wurden lassen sich nicht zuordnen.}
+\begin{tabular}{|c| c |c|c|}
+\hline
+Probe & I[A] & m[u] & Teilchen \\
+\hline
+KY14    & 50,6    & 17.2 & $^{17}$O$^{1-}$ \\
+ 	& 60,11 & 24,2 & X\\
+	& 62,57 & 26,2 & $^{10}$Be$^{1-}$$^{16}$O$^{1-}$ oder  $^{26}$Al$^{1-}$ \\
+	& 66,13 & 29,3 & X\\
+	& 67,24 & 30,3 & X\\
+	& 69,51 & 32,4 & X\\
+	& 73,79 & 36,5 & X\\
+	& 78,78 & 41,6 $^{26}$Al$^{1-}$$^{16}$O$^{1-}$\\
+	& 80,59 &43,56 $^{27}$Al$^{1-}$$^{16}$O$^{1-}$\\
 \end{tabular}
 \label{KY}
 \end{table}
-Wir werden jetzt die entsprechenden Massen den möglichen Teilchen zuordnen:
-\begin{itemize}
-\item Die Massen von $25$ bis $28$ u lassen sich eindeutig mit BaO$^{-1}$ identifizieren.
-Die Schwankungen hier lassen sich mit den bereits erwähnten natürlich vorkommenden Isotopen erklären.
-Erwartet sind Schwankungen zwischen $^9$Be$^{16}$O ($25$ u) und $^{10}$Be$^{18}$O ($28$ u), was zu den Daten passt.
-\item Die Massen von $16$ bis $18$ u sind mit den drei Sauerstoffisotopen erklärbar.
-\end{itemize}
-
-Die anderen Massen lassen sich nicht mit BeO erklären, müssen also aus Verunreinigungen der Probe resultieren.
-Diese werden sich ohne genaue Kentnis der Probe nicht eindeutig identifizieren lassen, wir können nur Vermutungen dafür angeben, basierend auf dem Wissen dass die Proben aus Quarz stammen, z. B. könnten $11,9$ u von  $^{12}$C$^{-1}$ Verunreinigungen stammen, welche z. B. aus der Luft stammen.
-Bei den anderen Proben ergibt sich ein weitgehend ähnliches Bild, auffällig sind nur noch Peaks um $44$ A,  $78$ A (entspricht $41,3$ u) sowie $80$ A (entspricht $43,5$ u).
-Diese lassen sich mit $^{26}$Al$^{-2}$ $^{26}$Al$^{16}$O$^{-1}$ erklären.
-Diese sind zwar keine natürlich vorkommen Isotope von Aluminium, könnten jedoch durch Kernreaktionen entstanden sein.
-AlO an sich ist eine natürlich vorkommende Verbindung in Quarz und schwer von BeO zu trennen.
+Die anderen Proben wiesen keine weiteren neuen Peaks auf und sind im wesentlichen zu KY14 identisch..
+AlO ist ein Stoff der häufig in Quarz, aus dem die Proben besteht, vorkommt und nur schwer von BeO zu trennen ist.
+Nicht zuordbare Peaks lassen sich wahrscheinlich auf Verschmutzungen oder Spurenelemente in der Probe zurückführen.
+Eine Analyse dieser könnte möglicherweise auch auf der Peakhöhe aufbauen, um z. B. zufällige Verschmutzungen durch entsprechend geringe Intensität als solche zu erkennen.
 
 \begin{figure}[h]
 \begin{subfigure}{.5\textwidth}
