--- a/AMS/Protokoll/Auswertung_mit_kali.tex
+++ b/AMS/Protokoll/Auswertung_mit_kali.tex
@@ -259,11 +259,12 @@ Für $^{10}$Be$^{2+}$ ergibt sich damit mit der Energie nach Beschleunigung von 
 Mit Gl. \ref{kali} ergibt sich damit für die Stromstärke für $^{10}$Be$^{2+}$: $I = 96,4$ A, was uns wieder als Ausgangspunkt zur Identifikation des Strahls dient.
 Die Masse für gemessene Stromstärken ergibt sich jetzt zu:
 \begin{equation}
-m_2 = m_1 \cdot \left( \frac{B_2}{B_1} \right)^2 = 10 \: \text{u} \cdot \frac{I}{96.40 \: \text{A}}
+m_2 = m_1 \cdot \left( \frac{B_2}{B_1} \right)^2 = 10 \: \text{u} \cdot \left( \frac{I}{96.40} \right)^{2} \: \text{A}}
 \end{equation}
 Die so berechneten Massen sind in Tab. \ref{highenergy} zu sehen.
-Durch betrachten der möglichen Verhältnisse von Ladung und Masse sowie Vergleich mit $^{10}$Be$^{2+}$
+Durch betrachten der möglichen Verhältnisse von Ladung und Masse sowie Vergleich mit $^{10}$Be$^{2+}$ konnten dann die Teilchen identifiziert werden.
 Zu beachten ist hier einerseits, dass wir nach dem Tandem eine vielzahl von Ladungszuständen erwarten und dass wir von einem Ion mit zweifach negativer Ladung ausgehen.
+Auch zu beachten ist, dass wir die Messgenauigkeiten (z. B. Hystereseeffekte beim Magneten) hier nicht kennen, weshalb hier eine gewisse Abweichung zu erwarten ist.
 
 \begin{table}[h]
 \centering
@@ -272,7 +273,7 @@ Zu beachten ist hier einerseits, dass wir nach dem Tandem eine vielzahl von Ladu
 \hline
 I[A] & m[u] & Ion \\
 \hline
-60,5   & 4,0   &  $^{9}$Be$^{4+}$  \\
+60,5   & 4,0   &  $^{12}$C$^{2+}$  \\
 67,1   & 4,9   &  $^{10}$Be$^{4+}$ \\
 71,9   & 5,6   &  $^{9}$Be$^{3+}$\\
 74,5   & 6,0   &  $^{10}$Be$^{3+}$\\
