--- a/AMS/Protokoll/main.tex
+++ b/AMS/Protokoll/main.tex
@@ -91,6 +91,8 @@ Betreuer: & \betreuer\end{tabular}}
 \input{Versuchsaufbau.tex}
 \input{Auswertung_mit_kali.tex}
 \input{Auswertung_Gasdetektor.tex}
+\input{Auswertung_konzentration.tex}
+\input{diskussion.tex}
 
 \nocite{*} % alle resourcen auflisten
 \printbibliography
